# fish-ai

./: .env  .gitignore  Get_started_LiveAPI_tools.ipynb  Makefile  README.md  action_processor.py  add_wifi.sh  arduino_controller.py  brain.py  entrypoint.py  finetune_gemma.ipynb  ft-llama.ipynb  input.py  input_deepgram.py  mcp_wrapper_simple.py  pyproject.toml  requirements.txt  robot_fish_conversations.csv  smoltalk.csv  test.py  testing_langgraph.ipynb  tooling.py  tts.py  tts_elevenlabs.py  tts_espeak.py  tts_parler_disaster.py  voice.ipynb
agent_assets/: agent.py  nodes.py
data/: fish.ppn  robot_fish_conversations.csv
fish-driver/: platformio.ini
fish-driver/src/: main.cpp
synthetic_data/: final.csv  gemma2_2b_it.ipynb  generate_data.py  gguf_conv.ipynb  parse_datasets.ipynb  robot_fish_conversations_grouped.csv  smoltalk.ipynb  smoltalk.py
testing/: audio.py  services.ipynb
utils/: llm.py
