[project]
name = "fish-perfected"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google>=3.0.0",
    "google-genai>=1.5.0",
    "google-generativeai>=0.8.4",
    "pydantic>=2.10.6",
    "pygame>=2.6.1",
    "python-dotenv>=1.0.1",
    "whisperx>=3.3.1",
]
