[project]
name = "fish-perfected"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "elevenlabs>=1.54.0",
    "google>=3.0.0",
    "google-genai>=1.5.0",
    "google-generativeai>=0.8.4",
    "ipykernel>=6.29.5",
    "librosa>=0.11.0",
    "mcp[cli]>=1.9.4",
    "openwakeword>=0.6.0",
    "pio>=0.0.3",
    "pvporcupine>=3.0.5",
    "pvrecorder>=1.2.6",
    "pyaudio>=0.2.14",
    "pydantic>=2.10.6",
    "pydub>=0.25.1",
    "pygame>=2.6.1",
    "python-dotenv>=1.0.1",
    "serial>=0.0.97",
    "sounddevice>=0.5.1",
    "whisperx>=3.3.1",
    "yt-dlp>=2025.4.30",
]
